# thorvg

./: .gitattributes  .gitignore  CMakeLists.txt  config.h.in  pixi.toml  thorvg.pc.in
_build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
_build_test2/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
_build_tools_test/: CMakeCache.txt  Makefile  cmake_install.cmake  lottie2gif  svg2png  thorvg-1.pc
wasm_scripts/: wasm_wcanvas_build.sh  wasm_wcanvas_setup.sh
